Fixed AlignMent Issues

--- a/src/components/ExpertiseTile/style.css
+++ b/src/components/ExpertiseTile/style.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
+    margin: 0 auto;
     margin-top: 60px;
 }
 
